--- a/docs/_sass/_mixins.scss
+++ b/docs/_sass/_mixins.scss
@@ -175,7 +175,7 @@
 // Container mixins
 @mixin container {
   width: 100%;
-  max-width: var(--max-width);
+  max-width: var(--max-width-container);
   margin: 0 auto;
   padding: 0 1rem;
 
